# bo2-recompiled

./: .gitignore  CMakeLists.txt  README.md  bo2_recompiled_config.toml
default/: CMakeLists.txt  CMakePresets.json  default_config.toml
default/src/: default_app.h  main.cpp  stubs.cpp
default_mp/: CMakeLists.txt  default_mp_config.toml
default_mp/src/: default_mp_app.h  main.cpp  stubs.cpp  xam.cpp
scripts/linux/: build_and_setup.sh  codegen.sh  preset.sh
scripts/windows/: build.bat  build_and_setup.bat  codegen.bat  preset.bat
src/: bo2_recompiled_app.h  main.cpp
